corrected the css refencename

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 
-<link rel = "stylesheet"type = "text/css"href = "MikeAndersen_Resume_css.css"/>
+<link rel = "stylesheet"type = "text/css"href = "index.css"/>
 header{  color: white;
   background-color: MidnightBlue;}
 
